Move plugin LuaMacro to this repository

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -174,7 +174,6 @@ add_subdirectory (WinPort)
 add_subdirectory (utils)
 add_subdirectory (far2l)
 add_dependencies (far2l farlng)
-add_subdirectory (luafar)
 
 set_target_properties(farlng
   PROPERTIES
@@ -206,6 +205,9 @@ endif()
 
 ##############################
 # plugins directives
+
+add_subdirectory (luafar)
+add_subdirectory (luamacro)
 
 if (NOT DEFINED ALIGN OR ALIGN)
 	message(STATUS "ALIGN plugin enabled")
