luamacro: add export.OpenFilePlugin

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -19,7 +19,7 @@ set_property(TARGET luamacro PROPERTY C_STANDARD 11)
 set(EXPORTS
   CLOSEPLUGIN COMPARE DELETEFILES GETFILES GETFINDDATA
   GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
-  SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN PROCESSEDITOREVENT
+  SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
 )
 
