--- a/far2l/bootstrap/xlats.ini
+++ b/far2l/bootstrap/xlats.ini
@@ -10,10 +10,10 @@ Latin=#FDULTPBQRKVYJGHCNEA{WXIO}SMZfdultpbqrkvyjghcnea[wxio]sm'z`~<>
 Local=№АВГДЕЗИЙКЛМНОПРСТУФХЦЧШЩЪЫЬЯавгдезийклмнопрстуфхцчшщъыьэяёЁБЮ
 
 ; extra translation pairs used if last language-specific character was latin
-AfterLatin=,? ?& ./ б, ю. :^ Ж: ж; ;$ \" @Э \"
+AfterLatin=?, &? /. ,б .ю ^: :Ж ;ж $; @" "Э
 
 ; extra translation pairs used if last language-specific character was local
-AfterLocal=?, &? /. ,б .ю ^: :Ж ;ж $; @\ "\ "Э
+AfterLocal=,? ?& ./ б, ю. :^ Ж: ж; ;$ "@ Э"
 
 ; extra translation pairs used if there were no language-specific characters yet
-AfterOther=^: :Ж Ж^ $; ;ж ж$ @\ "\ "Э Э@ &? ?, ,б б& /. .ю ю/
+AfterOther=^: :Ж Ж^ $; ;ж ж$ @" "Э Э@ &? ?, ,б б& /. .ю ю/
