--- a/luafar/CMakeLists.txt
+++ b/luafar/CMakeLists.txt
@@ -46,8 +46,8 @@ target_link_libraries(luafar2l uuid utils)
 
 target_compile_definitions(luafar2l PRIVATE -DWINPORT_DIRECT -DFAR_DONT_USE_INTERNALS)
 
-target_include_directories(luafar2l PRIVATE ../far2l/far2sdk)
-target_include_directories(luafar2l PRIVATE ../WinPort)
+target_include_directories(luafar2l PRIVATE ${CMAKE_SOURCE_DIR}/far2l/far2sdk)
+target_include_directories(luafar2l PRIVATE ${CMAKE_SOURCE_DIR}/WinPort)
 
 set_target_properties(luafar2l
   PROPERTIES
