Remove TRANSFORM subcommand (touch #21)

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -17,14 +17,17 @@ set(SOURCES
 add_library (luamacro MODULE ${SOURCES})
 set_property(TARGET luamacro PROPERTY C_STANDARD 11)
 
-set(EXPORTS
+set(EXPNAMES
   CLOSEPLUGIN COMPARE DELETEFILES GETFILES GETFINDDATA
   GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
   SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
 )
 
-list(TRANSFORM EXPORTS PREPEND "-DEXPORT_")
+set(EXPORTS "")
+foreach(f ${EXPNAMES})
+  list(APPEND EXPORTS "-DEXPORT_${f}")
+endforeach()
 
 target_link_libraries(luamacro PRIVATE luafar2l)
 
