1. Set the right macro area in GetPluginInfo()
2. Export ConfigureW in LuaMacro

--- a/luamacro/CMakeLists.txt
+++ b/luamacro/CMakeLists.txt
@@ -18,7 +18,7 @@ add_library (luamacro MODULE ${SOURCES})
 set_property(TARGET luamacro PROPERTY C_STANDARD 11)
 
 set(EXPNAMES
-  CLOSEPLUGIN COMPARE DELETEFILES GETFILES GETFINDDATA
+  CLOSEPLUGIN COMPARE CONFIGURE DELETEFILES GETFILES GETFINDDATA
   GETOPENPLUGININFO PROCESSHOSTFILE PROCESSEVENT PROCESSKEY PUTFILES
   SETDIRECTORY SETFINDLIST EXITFAR OPENPLUGIN OPENFILEPLUGIN PROCESSEDITOREVENT
   PROCESSEDITORINPUT PROCESSVIEWEREVENT PROCESSDIALOGEVENT PROCESSCONSOLEINPUT
