--- a/far2l/CMakeLists.txt
+++ b/far2l/CMakeLists.txt
@@ -24,7 +24,6 @@ src/fileattr.cpp
 src/fileedit.cpp
 src/filefilter.cpp
 src/filefilterparams.cpp
-src/filelist.cpp
 src/FilesSuggestor.cpp
 src/fileowner.cpp
 src/filepanels.cpp
@@ -32,11 +31,7 @@ src/filestr.cpp
 src/filetype.cpp
 src/fileview.cpp
 src/findfile.cpp
-src/flmodes.cpp
 src/flink.cpp
-src/flplugin.cpp
-src/flshow.cpp
-src/flupdate.cpp
 src/fnparce.cpp
 src/foldtree.cpp
 src/frame.cpp
@@ -45,7 +40,6 @@ src/help.cpp
 src/hilight.cpp
 src/hmenu.cpp
 src/Mounts.cpp
-src/infolist.cpp
 src/keybar.cpp
 src/main.cpp
 src/manager.cpp
@@ -55,9 +49,7 @@ src/mkdir.cpp
 src/modal.cpp
 src/namelist.cpp
 src/options.cpp
-src/panel.cpp
 src/plist.cpp
-src/qview.cpp
 src/rdrwdsk.cpp
 src/RefreshFrameManager.cpp
 src/scantree.cpp
@@ -67,7 +59,6 @@ src/stddlg.cpp
 src/synchro.cpp
 src/syslog.cpp
 src/TPreRedrawFunc.cpp
-src/treelist.cpp
 src/usermenu.cpp
 src/viewer.cpp
 src/vmenu.cpp
@@ -113,6 +104,16 @@ src/cfg/language.cpp
 src/hist/history.cpp
 src/hist/poscache.cpp
 
+src/panels/filelist.cpp
+src/panels/flmodes.cpp
+src/panels/flplugin.cpp
+src/panels/flshow.cpp
+src/panels/flupdate.cpp
+src/panels/infolist.cpp
+src/panels/panel.cpp
+src/panels/qview.cpp
+src/panels/treelist.cpp
+
 src/plug/plugapi.cpp
 src/plug/plugins.cpp
 src/plug/PluginW.cpp
@@ -152,6 +153,7 @@ src/mix/RegExp.cpp
 src/mix/strmix.cpp
 src/mix/FSFileFlags.cpp
 src/mix/StrCells.cpp
+src/mix/CachedCreds.cpp
 )
 
 # Set target names for the executables
@@ -200,6 +202,7 @@ target_include_directories(far2l PRIVATE
 	src/hist
 	src/locale
 	src/macro
+	src/panels
 	src/plug
 	src/vt
 	${CMAKE_CURRENT_BINARY_DIR}
