Fix in macrobrowser + refactoring

--- a/packaging/CMakeLists.txt
+++ b/packaging/CMakeLists.txt
@@ -2,8 +2,8 @@ string(TOLOWER ${PROJECT_NAME} CPACK_PACKAGE_NAME)
 IF (NOT ${USEWX})
     SET(CPACK_PACKAGE_NAME "${CPACK_PACKAGE_NAME}-nowx")
 ENDIF()
-set(CPACK_PACKAGE_VENDOR "elfmz")
-set(CPACK_PACKAGE_CONTACT "https://github.com/elfmz")
+set(CPACK_PACKAGE_VENDOR "shmuz")
+set(CPACK_PACKAGE_CONTACT "https://github.com/shmuz")
 set(CPACK_PACKAGE_DESCRIPTION_SUMMARY "Multi-platform fork of FAR v2")
 SET(CPACK_PACKAGE_DESCRIPTION_FILE "${CMAKE_SOURCE_DIR}/README.md")
 SET(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_SOURCE_DIR}/LICENSE.txt")
